# python-hwpx

./: README.md  pyproject.toml
docs/: feature_showcase.hwpx  feature_showcase_v0.4.1.hwpx  feature_showcase_v0.4.2.hwpx  feature_showcase_v0.5.0.hwpx  program_structure.hwpx  program_structure_en.hwpx  python-hwpx_기능설명서_v0.5.0.hwpx  프로그램_전체구조_v0.5.0.hwpx
src/hwpx/: document.py
src/hwpx/cli/: README.md  __init__.py  hwpx_cli.py
src/hwpx/cli/core/: __init__.py  document.py  export.py  image.py  session.py  structure.py  table.py  text.py  validate.py
src/hwpx/cli/skills/: SKILL.md
src/hwpx/cli/utils/: __init__.py  repl_skin.py
src/hwpx/opc/: package.py  xml_utils.py
src/hwpx/oxml/: document.py  header.py  namespaces.py
tests/: test_char_property.py  test_namespace_compat.py
