[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-hwpx"
version = "2.8.2"
description = "Hancom HWPX 패키지를 로드하고 편집하기 위한 Python 유틸리티 모음"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "python-hwpx Maintainers" },
]
keywords = ["hwp", "hwpx", "hancom", "opc", "xml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Markup :: XML",
]
dependencies = [
    "lxml>=4.9,<6",
    "click>=8.0.0",
    "prompt-toolkit>=3.0.0",
]

[project.scripts]
hwpx = "hwpx.cli.hwpx_cli:main"
hwpx-unpack = "hwpx.tools.archive_cli:unpack_main"
hwpx-pack = "hwpx.tools.archive_cli:pack_main"
hwpx-validate = "hwpx.tools.validator:main"
hwpx-validate-package = "hwpx.tools.package_validator:main"
hwpx-page-guard = "hwpx.tools.page_guard:main"
hwpx-analyze-template = "hwpx.tools.template_analyzer:main"
hwpx-text-extract = "hwpx.tools.text_extract_cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["hwpx*"]

[tool.setuptools.package-data]
"hwpx" = ["py.typed"]
"hwpx.tools" = ["_schemas/*.xsd"]
"hwpx.data" = ["Skeleton.hwpx"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"
testpaths = ["tests"]


[tool.mypy]
python_version = "3.10"
files = [
    "src/hwpx/document.py",
    "src/hwpx/oxml/document.py",
    "src/hwpx/opc/package.py",
    "src/hwpx/opc/relationships.py",
    "src/hwpx/tools/archive_cli.py",
    "src/hwpx/tools/package_validator.py",
    "src/hwpx/tools/page_guard.py",
    "src/hwpx/tools/template_analyzer.py",
    "src/hwpx/tools/text_extract_cli.py",
    "src/hwpx/tools/text_extractor.py",
    "tests/template_automation/helpers.py",
    "tests/template_automation/generate_fixtures.py",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["hwpx.document", "hwpx.oxml.document"]
ignore_errors = true

[tool.pyright]
# Keep basic pyright focused on OPC/tooling modules that currently pass
# without suppressing their real diagnostics.
include = [
    "src/hwpx/opc/package.py",
    "src/hwpx/opc/relationships.py",
    "src/hwpx/tools/archive_cli.py",
    "src/hwpx/tools/package_validator.py",
    "src/hwpx/tools/page_guard.py",
    "src/hwpx/tools/template_analyzer.py",
    "src/hwpx/tools/text_extract_cli.py",
    "src/hwpx/tools/text_extractor.py",
    "tests/template_automation/helpers.py",
    "tests/template_automation/generate_fixtures.py",
]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
